[tool.poetry]
name = "pysnmp-lextudio"
version = "5.0.28"
description = ""
authors = ["Ilya Etingof <etingof@gmail.com>", "Lex Li <support@lextudio.com>"]
license = "BSD-2-Clause"
repository = "https://github.com/lextudio/pysnmp"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "README.md"

packages = [
    { include = "pysnmp" },
]
include = ["docs", "tests", "examples"]


[tool.poetry.dependencies]
python = "^3.7"
pyasn1 = ">=0.4.8, <0.5.0"
pysnmpcrypto = "^0.0.4"
pysmi-lextudio = "^1.0.4"

[tool.poetry.dev-dependencies]
Sphinx = "^4.3.0"
pytest = "^7.2.0"
codecov = "^2.1.12"
pytest-codecov = "^0.4.0"

[tool.poetry_bumpversion.file."pysnmp/__init__.py"]

[tool.poetry_bumpversion.file."docs/source/conf.py"]
search = "release = '{current_version}'"
replace = "release = '{new_version}'"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
