[tool.poetry]
name = "pysnmp"
version = "7.1.4"
description = "A Python library for SNMP"
authors = ["Ilya Etingof <etingof@gmail.com>", "LeXtudio Inc. <support@lextudio.com>"]
license = "BSD-2-Clause"
repository = "https://github.com/lextudio/pysnmp"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "README.md"

packages = [
    { include = "pysnmp" },
]
include = ["docs", "tests", "examples"]


[tool.poetry.dependencies]
python = "^3.8"
pyasn1 = ">=0.4.8, !=0.5.0"
pysmi = "^1.3.0"

[tool.poetry.group.dev.dependencies]
codecov = "^2.1.12"
pytest = "^7.2.0"
pytest-codecov = "^0.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
Sphinx = "^7.0.0"
sphinx-copybutton = "^0.5.2"
furo = "^2023.1.1"
sphinx-sitemap-lextudio = "^2.5.2"
black = "23.1.0"
pre-commit = "2.21.0"
doc8 = "^1.0.0"
sphinx-notfound-page = "^1.0.0"
flake8 = "5.0.4"
flake8-import-order = "^0.18.2"
flake8-docstrings = "^1.7.0"
flake8-rst-docstrings = "^0.3.0"
sphinx-polyversion = "^1.0.0"
cryptography = "^43.0.1"

[tool.poetry_bumpversion.file."pysnmp/__init__.py"]

[tool.poetry_bumpversion.file."docs/source/conf.py"]
search = "release = \"{current_version}\""
replace = "release = \"{new_version}\""

[tool.poetry_bumpversion.file."SECURITY.md"]
search = "| {current_version}"
replace = "| {new_version}"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.esbonio.sphinx]
buildCommand = ["sphinx-build", "-M", "html", "./docs/source", "./docs/build"]
